Approximately working version

--- a/test/Makefile
+++ b/test/Makefile
@@ -290,10 +290,10 @@ AUTOCONF = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing autoconf
 AUTOHEADER = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing autoheader
 AUTOMAKE = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing automake-1.13
 AWK = awk
-CC = gcc
+CC = cc -g
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
-CPP = gcc -E
+CPP = cc -g -E
 CPPFLAGS = 
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
@@ -335,7 +335,7 @@ abs_builddir = /Users/vlegrand/Desktop/golden-1.1a/test
 abs_srcdir = /Users/vlegrand/Desktop/golden-1.1a/test
 abs_top_builddir = /Users/vlegrand/Desktop/golden-1.1a
 abs_top_srcdir = /Users/vlegrand/Desktop/golden-1.1a
-ac_ct_CC = gcc
+ac_ct_CC = cc -g
 am__include = include
 am__leading_dot = .
 am__quote = 
