--- a/src/Makefile
+++ b/src/Makefile
@@ -178,10 +178,10 @@ AUTOCONF = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing autoconf
 AUTOHEADER = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing autoheader
 AUTOMAKE = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing automake-1.13
 AWK = awk
-CC = cc -g
+CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g -O2
-CPP = cc -g -E
+CFLAGS = -g
+CPP = gcc -E
 CPPFLAGS = 
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
@@ -223,7 +223,7 @@ abs_builddir = /Users/vlegrand/Desktop/golden-1.1a/src
 abs_srcdir = /Users/vlegrand/Desktop/golden-1.1a/src
 abs_top_builddir = /Users/vlegrand/Desktop/golden-1.1a
 abs_top_srcdir = /Users/vlegrand/Desktop/golden-1.1a
-ac_ct_CC = cc -g
+ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
 am__quote = 
