fixed indentation+removed warning.

--- a/python/Makefile
+++ b/python/Makefile
@@ -86,10 +86,10 @@ AUTOCONF = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing autoconf
 AUTOHEADER = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing autoheader
 AUTOMAKE = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing automake-1.13
 AWK = awk
-CC = gcc
+CC = gcc -g -Wall
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g
-CPP = gcc -E
+CFLAGS = -g -O2
+CPP = gcc -g -Wall -E
 CPPFLAGS = 
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
@@ -131,7 +131,7 @@ abs_builddir = /Users/vlegrand/Desktop/golden-1.1a/python
 abs_srcdir = /Users/vlegrand/Desktop/golden-1.1a/python
 abs_top_builddir = /Users/vlegrand/Desktop/golden-1.1a
 abs_top_srcdir = /Users/vlegrand/Desktop/golden-1.1a
-ac_ct_CC = gcc
+ac_ct_CC = gcc -g -Wall
 am__include = include
 am__leading_dot = .
 am__quote = 
