--- a/src/Makefile
+++ b/src/Makefile
@@ -180,7 +180,7 @@ AUTOMAKE = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing automake-1.13
 AWK = awk
 CC = gcc -g -Wall
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g -O2
+CFLAGS = -g
 CPP = gcc -g -Wall -E
 CPPFLAGS = 
 CYGPATH_W = echo
