--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,7 +5,7 @@ LOG_COMPILER = $(SHELL)
 TESTS = goldin.sh golden.sh virtual.sh
 
 EXTRA_DIST = $(TESTS) all/embl.dat all/genbank.dat all/nrl_3d.dat \
-	all/prosite.dat
+	data/prosite.dat data/embl_in.dat data/genbank_in.dat data/prosite_in.txt
 
 CLEANFILES = *.acx *.dbx *.idx *.vix
 
