--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -377,7 +377,7 @@ AM_COLOR_TESTS = no
 LOG_COMPILER = $(SHELL)
 TESTS = goldin.sh golden.sh virtual.sh
 EXTRA_DIST = $(TESTS) all/embl.dat all/genbank.dat all/nrl_3d.dat \
-	all/prosite.dat
+	data/prosite.dat data/embl_in.dat data/genbank_in.dat data/prosite_in.txt
 
 CLEANFILES = *.acx *.dbx *.idx *.vix
 all: all-am
