--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,8 +4,7 @@ LOG_COMPILER = $(SHELL)
 
 TESTS = goldin.sh golden.sh virtual.sh
 
-EXTRA_DIST = $(TESTS) all/embl.dat all/genbank.dat all/nrl_3d.dat \
-	data/prosite.dat data/embl_in.dat data/genbank_in.dat data/prosite_in.txt
+EXTRA_DIST = $(TESTS) all/embl.dat all/genbank.dat all/nrl_3d.dat all/prosite.dat data/embl_in.txt data/genbank_in.txt data/prosite_in.txt
 
 CLEANFILES = *.acx *.dbx *.idx *.vix
 
