--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ LINTDEFS = $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS)
 
 AM_CPPFLAGS = -DDATADIR=\"$(pkgdatadir)\"
 
-bin_PROGRAMS = golden goldin
+bin_PROGRAMS = golden goldin unit_tests
 noinst_LIBRARIES = libgolden.a
 noinst_HEADERS = $(HDR)
 pkgdata_DATA =
@@ -14,9 +14,13 @@ golden_LDADD = libgolden.a
 goldin_SOURCES = goldin.c
 goldin_LDADD = libgolden.a
 
+unit_tests_SOURCES = unit_tests.c
+
 libgolden_a_SOURCES = $(SRC)
 SRC = access.c entry.c error.c index.c list.c locus.c query.c
 HDR = access.h entry.h error.h index.h list.h locus.h query.h
+
+TESTS = unit_tests.sh
 
 ## Maintainer parano check
 parano:
