--- a/python/Makefile
+++ b/python/Makefile
@@ -79,12 +79,12 @@ am__can_run_installinfo = \
   esac
 am__tagged_files = $(HEADERS) $(SOURCES) $(TAGS_FILES) $(LISP)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing aclocal-1.13
+ACLOCAL = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing aclocal-1.13
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
-AUTOCONF = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing autoconf
-AUTOHEADER = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing autoheader
-AUTOMAKE = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing automake-1.13
+AUTOCONF = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing autoconf
+AUTOHEADER = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing autoheader
+AUTOMAKE = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing automake-1.13
 AWK = awk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -109,7 +109,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/missing makeinfo
+MAKEINFO = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing makeinfo
 MKDIR_P = .././install-sh -c -d
 OBJEXT = o
 PACKAGE = golden
@@ -127,10 +127,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 1
-abs_builddir = /Users/vlegrand/Desktop/golden-1.1a/python
-abs_srcdir = /Users/vlegrand/Desktop/golden-1.1a/python
-abs_top_builddir = /Users/vlegrand/Desktop/golden-1.1a
-abs_top_srcdir = /Users/vlegrand/Desktop/golden-1.1a
+abs_builddir = /Users/vlegrand/Desktop/golden-3.0/python
+abs_srcdir = /Users/vlegrand/Desktop/golden-3.0/python
+abs_top_builddir = /Users/vlegrand/Desktop/golden-3.0
+abs_top_srcdir = /Users/vlegrand/Desktop/golden-3.0
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -149,7 +149,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/vlegrand/Desktop/golden-1.1a/install-sh
+install_sh = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
