--- a/src/Makefile
+++ b/src/Makefile
@@ -76,7 +76,7 @@ libgolden_a_AR = $(AR) $(ARFLAGS)
 libgolden_a_LIBADD =
 am__objects_1 = access.$(OBJEXT) entry.$(OBJEXT) error.$(OBJEXT) \
 	index.$(OBJEXT) list.$(OBJEXT) locus.$(OBJEXT) query.$(OBJEXT) \
-	index_utils.$(OBJEXT)
+	index_utils.$(OBJEXT) goldin_options.$(OBJEXT)
 am_libgolden_a_OBJECTS = $(am__objects_1)
 libgolden_a_OBJECTS = $(am_libgolden_a_OBJECTS)
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(pkgdatadir)"
@@ -189,9 +189,9 @@ AUTOMAKE = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing automake-1.13
 AWK = awk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g
+CFLAGS = -Qunused-arguments
 CPP = gcc -E
-CPPFLAGS = 
+CPPFLAGS = -Qunused-arguments
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -284,8 +284,8 @@ unit_tests_LDADD = libgolden.a
 perf_tests_SOURCES = perf_tests.c
 perf_tests_LDADD = libgolden.a
 libgolden_a_SOURCES = $(SRC)
-SRC = access.c entry.c error.c index.c list.c locus.c query.c index_utils.c
-HDR = access.h entry.h error.h index.h list.h locus.h query.h
+SRC = access.c entry.c error.c index.c list.c locus.c query.c index_utils.c goldin_options.c
+HDR = access.h entry.h error.h index.h list.h locus.h query.h goldin_options.h
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -409,6 +409,7 @@ include ./$(DEPDIR)/entry.Po
 include ./$(DEPDIR)/error.Po
 include ./$(DEPDIR)/golden.Po
 include ./$(DEPDIR)/goldin.Po
+include ./$(DEPDIR)/goldin_options.Po
 include ./$(DEPDIR)/index.Po
 include ./$(DEPDIR)/index_utils.Po
 include ./$(DEPDIR)/list.Po
