updated changelog. updated NEWS. removed printing of « #### » in golden.c removed printing of « entries not found » if all entrieswere found (bug fix).

--- a/python/Makefile
+++ b/python/Makefile
@@ -86,10 +86,10 @@ AUTOCONF = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing autoconf
 AUTOHEADER = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing autoheader
 AUTOMAKE = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing automake-1.13
 AWK = awk
-CC = gcc
+CC = CC -g
 CCDEPMODE = depmode=gcc3
 CFLAGS = -Qunused-arguments
-CPP = gcc -E
+CPP = CC -g -E
 CPPFLAGS = -Qunused-arguments
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
@@ -131,7 +131,7 @@ abs_builddir = /Users/vlegrand/Desktop/golden-3.0/python
 abs_srcdir = /Users/vlegrand/Desktop/golden-3.0/python
 abs_top_builddir = /Users/vlegrand/Desktop/golden-3.0
 abs_top_srcdir = /Users/vlegrand/Desktop/golden-3.0
-ac_ct_CC = gcc
+ac_ct_CC = CC -g
 am__include = include
 am__leading_dot = .
 am__quote = 
