--- a/test/Makefile
+++ b/test/Makefile
@@ -290,10 +290,10 @@ AUTOCONF = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing autoconf
 AUTOHEADER = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing autoheader
 AUTOMAKE = ${SHELL} /Users/vlegrand/Desktop/golden-3.0/missing automake-1.13
 AWK = awk
-CC = gcc
+CC = CC -g
 CCDEPMODE = depmode=gcc3
 CFLAGS = -Qunused-arguments
-CPP = gcc -E
+CPP = CC -g -E
 CPPFLAGS = -Qunused-arguments
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
@@ -319,10 +319,10 @@ OBJEXT = o
 PACKAGE = golden
 PACKAGE_BUGREPORT = 
 PACKAGE_NAME = golden
-PACKAGE_STRING = golden 3
+PACKAGE_STRING = golden 3.0
 PACKAGE_TARNAME = golden
 PACKAGE_URL = 
-PACKAGE_VERSION = 3
+PACKAGE_VERSION = 3.0
 PATH_SEPARATOR = :
 POD2MAN = pod2man
 PYTHON = /usr/bin/python
@@ -330,12 +330,12 @@ RANLIB = ranlib
 SET_MAKE = 
 SHELL = /bin/sh
 STRIP = 
-VERSION = 3
+VERSION = 3.0
 abs_builddir = /Users/vlegrand/Desktop/golden-3.0/test
 abs_srcdir = /Users/vlegrand/Desktop/golden-3.0/test
 abs_top_builddir = /Users/vlegrand/Desktop/golden-3.0
 abs_top_srcdir = /Users/vlegrand/Desktop/golden-3.0
-ac_ct_CC = gcc
+ac_ct_CC = CC -g
 am__include = include
 am__leading_dot = .
 am__quote = 
@@ -376,7 +376,7 @@ top_srcdir = ..
 AM_COLOR_TESTS = no
 LOG_COMPILER = $(SHELL)
 TESTS = goldin.sh golden.sh virtual.sh
-EXTRA_DIST = $(TESTS) all/embl.dat all/genbank.dat all/nrl_3d.dat all/prosite.dat data/embl_in.txt data/genbank_in.txt data/prosite_in.txt
+EXTRA_DIST = $(TESTS) all/embl.dat all/genbank.dat all/nrl_3d.dat all/prosite.dat data/embl_in.txt data/genbank_in.txt data/prosite_in.txt all/wgs_extract.1.gbff all/wgs_extract.1.gnp all/wgs_extract.2.gbff all/wgs_extract.2.gnp all/wgs_extract.3.gnp
 CLEANFILES = *.acx *.dbx *.idx *.vix
 all: all-am
 
