--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -376,7 +376,7 @@ top_srcdir = @top_srcdir@
 AM_COLOR_TESTS = no
 LOG_COMPILER = $(SHELL)
 TESTS = goldin.sh golden.sh virtual.sh
-EXTRA_DIST = $(TESTS) all/embl.dat all/genbank.dat all/nrl_3d.dat all/prosite.dat data/embl_in.txt data/genbank_in.txt data/prosite_in.txt
+EXTRA_DIST = $(TESTS) all/embl.dat all/genbank.dat all/nrl_3d.dat all/prosite.dat data/embl_in.txt data/genbank_in.txt data/prosite_in.txt all/wgs_extract.1.gbff all/wgs_extract.1.gnp all/wgs_extract.2.gbff all/wgs_extract.2.gnp all/wgs_extract.3.gnp
 CLEANFILES = *.acx *.dbx *.idx *.vix
 all: all-am
 
