new version of golden see README to know what's new

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -1,5 +1,5 @@
 
-EXTRA_DIST = Golden.c setup.py
+EXTRA_DIST = Golden.c setup.py entryIterator.py
 
 all-local:
 	@if test "$(srcdir)" = "."; then \
@@ -11,5 +11,7 @@ clean-local:
 	@if test "$(srcdir)" = "."; then \
 	  $(PYTHON) $(srcdir)/setup.py clean -a; fi
 install-exec-local:
-	@if test "$(srcdir)" = "."; then \
-	  $(PYTHON) $(srcdir)/setup.py install; fi
+	if [ "$(srcdir)" = "." ] && [ "$(dir_for_binding_install)" = "" ]; then \
+   $(PYTHON) $(srcdir)/setup.py install; \
+ elif [ "$(srcdir)" = "." ] && [ "$(dir_for_binding_install)" != "" ]; then \
+   $(PYTHON) $(srcdir)/setup.py install --prefix $(dir_for_binding_install); fi
