adedd bibdings for python3.7 and python 3.8

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT([golden],3.4.1)
+AC_INIT([golden],3.4.2)
 AC_CONFIG_SRCDIR([src/golden.c])
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([src/config.h])
@@ -12,6 +12,8 @@ AC_PATH_PROG([PYTHON2_7], [python2.7], [/bin/false])
 AC_PATH_PROG([PYTHON3_4], [python3.4], [/bin/false])
 AC_PATH_PROG([PYTHON3_5], [python3.5], [/bin/false])
 AC_PATH_PROG([PYTHON3_6], [python3.6], [/bin/false])
+AC_PATH_PROG([PYTHON3_7], [python3.7], [/bin/false])
+AC_PATH_PROG([PYTHON3_8], [python3.8], [/bin/false])
 
 
 # Checks for libraries.
