Now taking into account python 3.7 and python3.8 for the python bindings.

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -8,8 +8,10 @@ all-local:
 	  $(PYTHON3_4) $(srcdir)/setup.py build; fi
 	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_5)" != "/bin/false" ]; then \
 	  $(PYTHON3_5) $(srcdir)/setup.py build; fi
-	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_6)" != "/bin/false" ]; then \
-	  $(PYTHON3_6) $(srcdir)/setup.py build; fi
+	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_7)" != "/bin/false" ]; then \
+	  $(PYTHON3_7) $(srcdir)/setup.py build; fi
+	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_8)" != "/bin/false" ]; then \
+	  $(PYTHON3_8) $(srcdir)/setup.py build; fi
 check-local:
 	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON2_7)" != "/bin/false" ]; then \
 	  $(PYTHON2_7) $(srcdir)/setup.py check; fi
@@ -17,8 +19,11 @@ check-local:
 	  $(PYTHON3_4) $(srcdir)/setup.py check; fi
 	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_5)" != "/bin/false" ]; then \
 	  $(PYTHON3_5) $(srcdir)/setup.py check; fi
-	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_6)" != "/bin/false" ]; then \
-	  $(PYTHON3_6) $(srcdir)/setup.py check; fi
+	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_7)" != "/bin/false" ]; then \
+	  $(PYTHON3_7) $(srcdir)/setup.py check; fi
+	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_8)" != "/bin/false" ]; then \
+	  $(PYTHON3_8) $(srcdir)/setup.py check; fi
+
 clean-local:
 	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON2_7)" != "/bin/false" ]; then \
 	  $(PYTHON2_7) $(srcdir)/setup.py clean -a; fi
@@ -26,8 +31,11 @@ clean-local:
 	  $(PYTHON3_4) $(srcdir)/setup.py clean -a; fi
 	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_5)" != "/bin/false" ]; then \
 	  $(PYTHON3_5) $(srcdir)/setup.py clean -a; fi
-	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_6)" != "/bin/false" ]; then \
-	  $(PYTHON3_6) $(srcdir)/setup.py clean -a; fi
+	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_7)" != "/bin/false" ]; then \
+	  $(PYTHON3_7) $(srcdir)/setup.py clean -a; fi
+	@if [ "$(srcdir)" = "." ] && [ "$(PYTHON3_8)" != "/bin/false" ]; then \
+	  $(PYTHON3_8) $(srcdir)/setup.py clean -a; fi
+
 install-exec-local:
 	if [ "$(srcdir)" = "." ] && [ "$(dir_for_binding_install)" = "" ]; then \
 		if [ "$(PYTHON2_7)" != "/bin/false" ]; then $(PYTHON2_7) $(srcdir)/setup.py install; fi; fi
@@ -44,4 +52,7 @@ install-exec-local:
 	if [ "$(srcdir)" = "." ] && [ "$(dir_for_binding_install)" != "" ]; then \
 		if [ "$(PYTHON3_5)" != "/bin/false" ]; then $(PYTHON3_5) $(srcdir)/setup.py install --prefix $(dir_for_binding_install); fi;fi
 	if [ "$(srcdir)" = "." ] && [ "$(dir_for_binding_install)" != "" ]; then \
-		if [ "$(PYTHON3_6)" != "/bin/false" ]; then $(PYTHON3_6) $(srcdir)/setup.py install --prefix $(dir_for_binding_install); fi;fi
+		if [ "$(PYTHON3_7)" != "/bin/false" ]; then $(PYTHON3_7) $(srcdir)/setup.py install --prefix $(dir_for_binding_install); fi;fi
+	if [ "$(srcdir)" = "." ] && [ "$(dir_for_binding_install)" != "" ]; then \
+		if [ "$(PYTHON3_8)" != "/bin/false" ]; then $(PYTHON3_8) $(srcdir)/setup.py install --prefix $(dir_for_binding_install); fi;fi
+
