added bindings for python versions >3.11

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT([golden],3.4.2)
+AC_INIT([golden],3.4.4)
 AC_CONFIG_SRCDIR([src/golden.c])
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([src/config.h])
@@ -9,13 +9,27 @@ AC_PROG_CC
 AC_PROG_RANLIB
 AC_CHECK_PROG(POD2MAN, pod2man, pod2man, :)
 AC_PATH_PROG([PYTHON2_7], [python2.7], [/bin/false])
-AC_PATH_PROG([PYTHON3_4], [python3.4], [/bin/false])
-AC_PATH_PROG([PYTHON3_5], [python3.5], [/bin/false])
-AC_PATH_PROG([PYTHON3_6], [python3.6], [/bin/false])
-AC_PATH_PROG([PYTHON3_7], [python3.7], [/bin/false])
-AC_PATH_PROG([PYTHON3_8], [python3.8], [/bin/false])
-AC_PATH_PROG([PYTHON3_9], [python3.9], [/bin/false])
-
+# AC_PATH_PROG([PYTHON3_4], [python3.4], [/bin/false])
+# AC_PATH_PROG([PYTHON3_5], [python3.5], [/bin/false])
+# AC_PATH_PROG([PYTHON3_6], [python3.6], [/bin/false])
+# AC_PATH_PROG([PYTHON3_7], [python3.7], [/bin/false])
+# AC_PATH_PROG([PYTHON3_8], [python3.8], [/bin/false])
+# AC_PATH_PROG([PYTHON3_9], [python3.9], [/bin/false])
+# Try do do something more generic so that I don't have to check all existing versions of python.
+AC_PATH_PROG([PYTHON3], [python3],  [/bin/false])
+if test -z "$PYTHON3"; then
+   AC_MSG_ERROR([Could not find a suitable Python 3 interpreter])
+fi
+# If python3 is not found, try highest versions first
+# for ver in 3.13 3.12 3.11 3.10 3.9 3.8 3.7 3.6 3.5 3.4; do
+#		        AC_PATH_PROG([PYTHON3], [python$ver])
+#			    if test -n "$PYTHON3"; then
+#				          break
+#					      fi
+#					        done
+#					fi
+#
+AC_SUBST([PYTHON3])
 
 # Checks for libraries.
 
